--- a/templates/index.html
+++ b/templates/index.html
@@ -11,9 +11,7 @@
 <div class="row" style="height: 40px"></div>
 
 <div class="row">
-  <div class="col-md-1">
-  </div>
-  <div class="col-md-7">
+  <div class="col-md-9">
     <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
       <!-- Indicators -->
       <ol class="carousel-indicators">
@@ -25,21 +23,27 @@
       <!-- Wrapper for slides -->
       <div class="carousel-inner">
         <div class="item active" style="background: rgba(0, 0, 0, 0.5); min-height: 385px">
+          <center>
           <img src="http://fluxmon.de/render/76b4d61b-53c8-41df-b490-cf9f41f302c3/pac.png?token=a9aabfe9-7f92-4946-8ad1-25b5be8a064d&amp;width=553" alt="AC Power" />
+          </center>
           <div class="carousel-caption">
             A simple measurement
           </div>
         </div>
 
         <div class="item" style="background: rgba(0, 0, 0, 0.5); min-height: 385px">
+          <center>
           <img src="http://fluxmon.de/render/76b4d61b-53c8-41df-b490-cf9f41f302c3/etoday.png?token=a9aabfe9-7f92-4946-8ad1-25b5be8a064d&amp;width=553" alt="Energy production" />
+          </center>
           <div class="carousel-caption">
             repetitions are accounted for
           </div>
         </div>
 
         <div class="item" style="background: rgba(0, 0, 0, 0.5); min-height: 385px">
+          <center>
           <img src="http://fluxmon.de/render/205847de-05ff-4f89-8c58-617899ef3300/tx_packetsize.png?token=a9aabfe9-7f92-4946-8ad1-25b5be8a064d&amp;width=553" alt="AC Power" />
+          </center>
           <div class="carousel-caption">
             doing calculations
           </div>
@@ -55,8 +59,6 @@
       </a>
     </div>
   </div>
-  <div class="col-md-1">
-  </div>
 </div>
 
 <div class="row" style="height: 40px"></div>
@@ -66,7 +68,7 @@
     <h2>Auto discovery</h2>
     <p>
       Flux configures sensors and checks automatically so your systems are completely monitored. Stop worrying about
-      configuring checks by hand!
+      configuring checks by hand.
     </p>
   </div>
 
