add a tiny little padding

--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
 
       <!-- Wrapper for slides -->
       <div class="carousel-inner">
-        <div class="item active" style="background: rgba(0, 0, 0, 0.5); min-height: 385px">
+        <div class="item active" style="background: rgba(0, 0, 0, 0.5); min-height: 385px; padding-top: 10px;">
           <center>
           <img src="http://fluxmon.de/render/76b4d61b-53c8-41df-b490-cf9f41f302c3/pac.png?token=a9aabfe9-7f92-4946-8ad1-25b5be8a064d&amp;width=553" alt="AC Power" />
           </center>
@@ -31,7 +31,7 @@
           </div>
         </div>
 
-        <div class="item" style="background: rgba(0, 0, 0, 0.5); min-height: 385px">
+        <div class="item" style="background: rgba(0, 0, 0, 0.5); min-height: 385px; padding-top: 10px;">
           <center>
           <img src="http://fluxmon.de/render/76b4d61b-53c8-41df-b490-cf9f41f302c3/etoday.png?token=a9aabfe9-7f92-4946-8ad1-25b5be8a064d&amp;width=553" alt="Energy production" />
           </center>
@@ -40,7 +40,7 @@
           </div>
         </div>
 
-        <div class="item" style="background: rgba(0, 0, 0, 0.5); min-height: 385px">
+        <div class="item" style="background: rgba(0, 0, 0, 0.5); min-height: 385px; padding-top: 10px;">
           <center>
           <img src="http://fluxmon.de/render/205847de-05ff-4f89-8c58-617899ef3300/tx_packetsize.png?token=a9aabfe9-7f92-4946-8ad1-25b5be8a064d&amp;width=553" alt="AC Power" />
           </center>
