--- a/templates/index.html
+++ b/templates/index.html
@@ -93,7 +93,7 @@
 
 <div class="row">
   <div class="col-md-9">
-    <img src="/static/architecture.png" alt="architecture" />
+    <img src="/static/architecture.png" alt="architecture" style="width: 100%"/>
   </div>
 </div>
 
