add another graph to show correlation views

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,6 +18,7 @@
         <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
         <li data-target="#carousel-example-generic" data-slide-to="1"></li>
         <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+        <li data-target="#carousel-example-generic" data-slide-to="3"></li>
       </ol>
 
       <!-- Wrapper for slides -->
@@ -42,10 +43,19 @@
 
         <div class="item" style="background: rgba(0, 0, 0, 0.5); min-height: 385px; padding-top: 10px;">
           <center>
-          <img src="http://fluxmon.de/render/205847de-05ff-4f89-8c58-617899ef3300/tx_packetsize.png?token=a9aabfe9-7f92-4946-8ad1-25b5be8a064d&amp;width=553" alt="AC Power" />
+          <img src="http://fluxmon.de/render/205847de-05ff-4f89-8c58-617899ef3300/tx_packetsize.png?token=a9aabfe9-7f92-4946-8ad1-25b5be8a064d&amp;width=553" alt="TX Packetsize" />
           </center>
           <div class="carousel-caption">
             doing calculations
+          </div>
+        </div>
+
+        <div class="item" style="background: rgba(0, 0, 0, 0.5); min-height: 385px; padding-top: 10px;">
+          <center>
+          <img src="http://fluxmon.de/render/205847de-05ff-4f89-8c58-617899ef3300/packetsize.png?token=a9aabfe9-7f92-4946-8ad1-25b5be8a064d&amp;width=553" alt="RX+TX Packetsize" />
+          </center>
+          <div class="carousel-caption">
+            correlating results
           </div>
         </div>
       </div>
