rephrase image descriptions

--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
           <img src="http://fluxmon.de/render/76b4d61b-53c8-41df-b490-cf9f41f302c3/pac.png?token=a9aabfe9-7f92-4946-8ad1-25b5be8a064d&amp;width=553" alt="AC Power" />
           </center>
           <div class="carousel-caption">
-            A simple measurement
+            A simple measurement and prediction
           </div>
         </div>
 
@@ -37,7 +37,7 @@
           <img src="http://fluxmon.de/render/76b4d61b-53c8-41df-b490-cf9f41f302c3/etoday.png?token=a9aabfe9-7f92-4946-8ad1-25b5be8a064d&amp;width=553" alt="Energy production" />
           </center>
           <div class="carousel-caption">
-            repetitions are accounted for
+            trends are accounted for
           </div>
         </div>
 
