--- a/monitoring/templates/monitoring/listchecks.inc.html
+++ b/monitoring/templates/monitoring/listchecks.inc.html
@@ -1,5 +1,6 @@
 {# kate: space-indent on; indent-width 2; replace-tabs on; hl Django HTML Template; #}
 {% load display_extras %}
+{% load monitoring_extras %}
 {% if list_checks %}
 <table class="table table-hover">
   <thead>
@@ -13,16 +14,18 @@
   </thead>
   <tbody>
   {% for check in list_checks %}
-    <tr targetlink="{% url monitoring.views.check_details check.uuid %}" class="checktr {% if check.current_alert %}warning{% else %}success{% endif %}">
-      <td>
-        {{ check.target_host }}
-        {% if check.target_host != check.exec_host %}(as seen by {{ check.exec_host }}){% endif %}
-      </td>
-      <td>{{ check|displayonly }}</td>
-      <td>{{ check.sensor }}</td>
-      <td>{{ check.paramstring }}</td>
-      <td><a href="{% url monitoring.views.check_details check.uuid %}" title="View details" style="text-decoration: none">→</a></td>
-    </tr>
+    {% ifperm "r" on check %}
+      <tr targetlink="{% url monitoring.views.check_details check.uuid %}" class="checktr {% if check.current_alert %}warning{% else %}success{% endif %}">
+        <td>
+          {{ check.target_host }}
+          {% if check.target_host != check.exec_host %}(as seen by {{ check.exec_host }}){% endif %}
+        </td>
+        <td>{{ check|displayonly }}</td>
+        <td>{{ check.sensor }}</td>
+        <td>{{ check.paramstring }}</td>
+        <td><a href="{% url monitoring.views.check_details check.uuid %}" title="View details" style="text-decoration: none">→</a></td>
+      </tr>
+    {% endifperm %}
   {% endfor %}
   </tbody>
 </table>
