--- a/monitoring/templates/profile.html
+++ b/monitoring/templates/profile.html
@@ -2,6 +2,7 @@
 {# kate: space-indent on; indent-width 2; replace-tabs on; hl Django HTML Template; #}
 {% load display_extras %}
 {% load gravatar_extras %}
+{% load monitoring_extras %}
 {% block content %}
 <h2>Hi {{ user.username }}!</h2>
 <div class="panel panel-default">
@@ -65,18 +66,20 @@
           </thead>
           <tbody>
           {% for alert in currentalerts %}
-            <tr onclick="window.location='{% url monitoring.views.check_details alert.check.uuid %}';">
-              <td>
-                {{ alert.check.target_host }}
-                {% if alert.check.target_host != alert.check.exec_host %}(as seen by {{ alert.check.exec_host }}){% endif %}
-              </td>
-              <td>{{ alert.check|displayonly }}</td>
-              <td>{{ alert.check.sensor }}</td>
-              <td>{{ alert.check.paramstring }}</td>
-              <td><span title="{{ alert.starttime }}">{{ alert.starttime|timesince }}</a></td>
-              <td>{{ alert.failcount }}</td>
-              <td><a href="{% url monitoring.views.check_details alert.check.uuid %}" title="View details" style="text-decoration: none">→</a></td>
-            </tr>
+            {% ifperm "r" on alert.check %}
+              <tr onclick="window.location='{% url monitoring.views.check_details alert.check.uuid %}';">
+                <td>
+                  {{ alert.check.target_host }}
+                  {% if alert.check.target_host != alert.check.exec_host %}(as seen by {{ alert.check.exec_host }}){% endif %}
+                </td>
+                <td>{{ alert.check|displayonly }}</td>
+                <td>{{ alert.check.sensor }}</td>
+                <td>{{ alert.check.paramstring }}</td>
+                <td><span title="{{ alert.starttime }}">{{ alert.starttime|timesince }}</a></td>
+                <td>{{ alert.failcount }}</td>
+                <td><a href="{% url monitoring.views.check_details alert.check.uuid %}" title="View details" style="text-decoration: none">→</a></td>
+              </tr>
+            {% endifperm %}
           {% endfor %}
           </tbody>
         </table>
