--- a/hosts/templates/hosts/host.html
+++ b/hosts/templates/hosts/host.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {# kate: space-indent on; indent-width 2; replace-tabs on; hl Django HTML Template; #}
 {% load display_extras %}
+{% load monitoring_extras %}
 {% block title %}Fluxmon &mdash; {{ host|display:"fqdn" }}{% endblock %}
 {% block content %}
 <ol class="breadcrumb">
@@ -11,16 +12,24 @@
   <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
     <span class="caret"></span>
   </button>
+  {% if not user.is_anonymous %}
   <ul class="dropdown-menu" role="menu">
+    {% ifperm "r" on host %}
     <li><a href="{% url monitoring.views.config host.fqdn %}" target="_blank">Download Config</a></li>
+    {% endifperm %}
+    {% ifperm "d" on host %}
     <li class="divider"></li>
     <li><a href="#">Delete all Checks</a></li>
     <li><a href="{% url hosts.views.delete_host host.fqdn %}">Delete Host</a></li>
+    {% endifperm %}
   </ul>
+  {% endif %}
 </div>
 <dl class="dl-horizontal">
   <dt>Host:</dt>
   <dd>{{ host.fqdn }}</dd>
+  <dt>Last update:</dt>
+  <dd>{{ host.get_last_update }}</dd>
 </dl>
 {% include "monitoring/listchecks.inc.html" with list_checks=checks %}
 {% endblock %}
