--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,7 @@
   <head>
     <title>{% block title %}Fluxmon{% endblock %}</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="viewport"     content="width=device-width, initial-scale=1.0" />
     <link rel='stylesheet'    href='http://fonts.googleapis.com/css?family=PT+Sans' type='text/css'>
     <link rel="stylesheet"    href="//netdna.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
     <link rel="stylesheet"    href="/static/base.css">
