add description of what flux is

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,16 @@
 <div class="row">
   <div class="col-md-9">
     <h1>Flux Performance Monitor</h1>
-    <h3>System performance analysis tool</h3>
+    <h3>a system performance analysis tool</h3>
+  </div>
+</div>
+
+<div class="row" style="height: 20px"></div>
+
+<div class="row">
+  <div class="col-md-9">
+    Flux collects and tracks performance indicators (latency, throughput, load) from attached systems, analyzes the
+    data with statistical methods to ease interpretation, enabling you to gain insights about potential optimizations.
   </div>
 </div>
 
