--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
 
 <div class="row">
   <div class="col-md-9">
-    Flux collects and tracks performance indicators (latency, throughput, load) from attached systems, analyzes the
+    Flux collects and tracks performance indicators (latency, throughput, load) from attached systems and analyzes the
     data with statistical methods to ease interpretation, enabling you to gain insights about potential optimizations.
   </div>
 </div>
