add host creation form

--- a/hosts/templates/hosts/domains.html
+++ b/hosts/templates/hosts/domains.html
@@ -10,6 +10,7 @@
     {% if not node.is_root_node %}
       <li>
         {{ node }} {% if node.host_set.count %} ({{ node.host_set.count }} Host{{ node.host_set.count|pluralize }})
+        (<a href="{% url hosts.views.add_host node.id %}">+</a>)
           <ul>
             {% for host in node.get_hosts %}
               {% ifperm "r" on host %}
