--- a/hosts/templates/hosts/hostadd.html
+++ b/hosts/templates/hosts/hostadd.html
@@ -4,7 +4,7 @@
 {% block title %}Fluxmon &mdash; Add host{% endblock %}
 {% block content %}
 <ol class="breadcrumb">
-  <li><a href="{% url hosts.views.domains %}">Hosts</a></li>
+  <li><a href="{% url 'hosts.views.domains' %}">Hosts</a></li>
   <li>{{ domain }}</li>
   <li class="active">Add Host</li>
 </ol>
