--- a/monitoring/templates/monitoring/graph.html
+++ b/monitoring/templates/monitoring/graph.html
@@ -5,12 +5,12 @@
 {% block content %}
 <div class="screenonly">
   <ol class="breadcrumb">
-    <li><a href="{% url hosts.views.domains %}">Hosts</a></li>
+    <li><a href="{% url 'hosts.views.domains' %}">Hosts</a></li>
     <li>
-      <a href="{% url hosts.views.host check.target_host.fqdn %}">{{ check.target_host|display:"fqdn" }}</a>
-      {% if check.target_host != check.exec_host %}(as seen by <a href="{% url hosts.views.host check.exec_host.fqdn %}">{{ check.exec_host|display:"fqdn" }}</a>){% endif %}
+      <a href="{% url 'hosts.views.host' check.target_host.fqdn %}">{{ check.target_host|display:"fqdn" }}</a>
+      {% if check.target_host != check.exec_host %}(as seen by <a href="{% url 'hosts.views.host' check.exec_host.fqdn %}">{{ check.exec_host|display:"fqdn" }}</a>){% endif %}
     </li>
-    <li><a href="{% url monitoring.views.check_details check.uuid %}">{{ check|display:"uuid" }}</a></li>
+    <li><a href="{% url 'monitoring.views.check_details' check.uuid %}">{{ check|display:"uuid" }}</a></li>
     <li class="active">{{ variable|display }}</li>
   </ol>
 </div>
@@ -18,14 +18,14 @@
 <h3>{{ variable|display }}</h3>
 <div id="profiles" class="screenonly">
   {% for profile in profiles %}
-    <a class="btn {% if profile == active_profile %}btn-primary{% else %}btn-default{% endif %}" href="{% url monitoring.views.render_check_page check.uuid variable.name profile %}#imgcontainer">{{ profile }}</a>
+    <a class="btn {% if profile == active_profile %}btn-primary{% else %}btn-default{% endif %}" href="{% url 'monitoring.views.render_check_page' check.uuid variable.name profile %}#imgcontainer">{{ profile }}</a>
   {% endfor %}
 </div>
 <div style="width: 100%; position: relative;" id="imgcontainer">
   <div id="imgselector" style="background-color: rgba(30, 30, 220, 0.4); position: absolute; height: 153px; width: 1px; z-index: 100; visibility: hidden;">&nbsp;</div>
-  <img class="widescreenonly"   src="{% url monitoring.views.render_check check.uuid variable.name %}?start={{ start }}&amp;end={{ end }}" alt="graph" style="margin: 0 auto" />
-  <img class="narrowscreenonly" src="{% url monitoring.views.render_check check.uuid variable.name %}?width=410&amp;start={{ start }}&amp;end={{ end }}" alt="graph" style="margin: 0 auto" />
-  <img class="tinyscreenonly"   src="{% url monitoring.views.render_check check.uuid variable.name %}?width=220&amp;start={{ start }}&amp;end={{ end }}" alt="graph" style="margin: 0 auto" />
+  <img class="widescreenonly"   src="{% url 'monitoring.views.render_check' check.uuid variable.name %}?start={{ start }}&amp;end={{ end }}" alt="graph" style="margin: 0 auto" />
+  <img class="narrowscreenonly" src="{% url 'monitoring.views.render_check' check.uuid variable.name %}?width=410&amp;start={{ start }}&amp;end={{ end }}" alt="graph" style="margin: 0 auto" />
+  <img class="tinyscreenonly"   src="{% url 'monitoring.views.render_check' check.uuid variable.name %}?width=220&amp;start={{ start }}&amp;end={{ end }}" alt="graph" style="margin: 0 auto" />
 </div>
 <script type="text/javascript">
 function min(a, b){ if( a < b ) return a; return b; }
@@ -88,7 +88,7 @@ function draggerize(imgel, selector){
     start = new_start;
     end   = new_end;
     // Load the new image
-    imgel[0].src = "{% url monitoring.views.render_check check.uuid variable.name %}?start="+start+"&end="+end;
+    imgel[0].src = "{% url 'monitoring.views.render_check' check.uuid variable.name %}?start="+start+"&end="+end;
     // Turn the currently highlighted button into a normal one
     $("#profiles a.btn-primary").removeClass("btn-primary").addClass("btn-default");
   };
