--- a/monitoring/templates/monitoring/searchform.inc.html
+++ b/monitoring/templates/monitoring/searchform.inc.html
@@ -2,7 +2,7 @@
   <h2>Search</h2>
 
   <div>
-    <form action="{% url monitoring.views.search %}" method="post">
+    <form action="{% url 'monitoring.views.search' %}" method="post">
       {% csrf_token %}
       {{ searchform.non_field_errors }}
       <div class="input-group fieldWrapper">
