--- a/monitoring/templates/monitoring/listchecks.inc.html
+++ b/monitoring/templates/monitoring/listchecks.inc.html
@@ -1,4 +1,4 @@
-l# kate: space-indent on; indent-width 2; replace-tabs on; hl Django HTML Template; #}
+{# kate: space-indent on; indent-width 2; replace-tabs on; hl Django HTML Template; #}
 {% load display_extras %}
 {% load monitoring_extras %}
 {% if list_checks %}
