use jquery from libjs-jquery instead of linking code.jquery.com

--- a/templates/base.html
+++ b/templates/base.html
@@ -8,11 +8,10 @@
     <link rel="stylesheet"    href="//netdna.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
     <link rel="stylesheet"    href="/static/base.css">
     <link rel="stylesheet"    href="/static/bootstrap_footer.css">
-    <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+    <script type="text/javascript" src="/jquery/jquery.min.js"></script>
   </head>
   <body>
     <div id="wrap">
-
       <!-- Fixed navbar -->
       <div class="navbar navbar-default navbar-fixed-top">
         <div class="container">
