--- a/monitoring/templates/monitoring/graph.html
+++ b/monitoring/templates/monitoring/graph.html
@@ -16,16 +16,27 @@
 </div>
 {% include "monitoring/checkinfo.inc.html" %}
 <h3>{{ variable|display }}</h3>
-<div id="profiles" class="screenonly">
-  {% for profile in profiles %}
-    <a class="btn {% if profile == active_profile %}btn-primary{% else %}btn-default{% endif %}" href="{% url 'monitoring.views.render_check_page' check.uuid variable.name profile %}#imgcontainer">{{ profile }}</a>
-  {% endfor %}
-</div>
-<div style="width: 100%; position: relative;" id="imgcontainer">
-  <div id="imgselector" style="background-color: rgba(30, 30, 220, 0.4); position: absolute; height: 153px; width: 1px; z-index: 100; visibility: hidden;">&nbsp;</div>
-  <img class="widescreenonly"   src="{% url 'monitoring.views.render_check' check.uuid variable.name %}?start={{ start }}&amp;end={{ end }}" alt="graph" style="margin: 0 auto" />
-  <img class="narrowscreenonly" src="{% url 'monitoring.views.render_check' check.uuid variable.name %}?width=410&amp;start={{ start }}&amp;end={{ end }}" alt="graph" style="margin: 0 auto" />
-  <img class="tinyscreenonly"   src="{% url 'monitoring.views.render_check' check.uuid variable.name %}?width=220&amp;start={{ start }}&amp;end={{ end }}" alt="graph" style="margin: 0 auto" />
+<div ng-controller="GraphDurationCtrl" ng-init="end = {{ end }};">
+  <div id="profiles" class="screenonly">
+    <a ng-repeat="profile in profiles"
+       class="btn" ng-class="{ 'btn-primary': profile == active_profile, 'btn-default': profile != active_profile}"
+       ng-click="set_active_profile(profile)">{[ profile.title ]}</a>
+    <br />
+  </div>
+  <div style="width: 100%; position: relative;" id="imgcontainer">
+    <div
+      id="imgselector"
+      style="background-color: rgba(30, 30, 220, 0.4); position: absolute; height: 153px; width: 1px; z-index: 100; visibility: hidden;">&nbsp;</div>
+    <img
+      class="widescreenonly" alt="graph" style="margin: 0 auto"
+      ng-src="{% url 'monitoring.views.render_check' check.uuid variable.name %}?start={[ start ]}&amp;end={[ end ]}" />
+    <img
+      class="narrowscreenonly" alt="graph" style="margin: 0 auto"
+      ng-src="{% url 'monitoring.views.render_check' check.uuid variable.name %}?width=410&amp;start={[ start ]}&amp;end={[ end ]}" />
+    <img
+      class="tinyscreenonly" alt="graph" style="margin: 0 auto"
+      ng-src="{% url 'monitoring.views.render_check' check.uuid variable.name %}?width=220&amp;start={[ start ]}&amp;end={[ end ]}" />
+  </div>
 </div>
 <script type="text/javascript">
 function min(a, b){ if( a < b ) return a; return b; }
