--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="FluxmonApp">
   <head>
     <title>{% block title %}Fluxmon{% endblock %}</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -9,6 +9,8 @@
     <link rel="stylesheet"    href="/static/base.css">
     <link rel="stylesheet"    href="/static/bootstrap_footer.css">
     <script type="text/javascript" src="/jquery/jquery.min.js"></script>
+    <script type="text/javascript" src="/angular.js/angular.min.js"></script>
+    <script type="text/javascript" src="/static/ng.app.js"></script>
   </head>
   <body>
     <div id="wrap">
