use standard bootstrap css classes

--- a/display/templates/display/displayform.html
+++ b/display/templates/display/displayform.html
@@ -4,7 +4,7 @@
     <span>{{ display }}</span>
     <button type="button" class="btn btn-default btn-xs"><span class="glyphicon glyphicon-pencil" title="Edit..."></span></button>
   </div>
-  <div class="fluxeditor fluxhidden">
+  <div class="fluxeditor hidden">
     <form class="form-inline" role="form">
       <input type="hidden" name="app"   value="{{ app }}" />
       <input type="hidden" name="model" value="{{ model }}" />
