--- a/monitoring/templates/monitoring/graph.html
+++ b/monitoring/templates/monitoring/graph.html
@@ -3,7 +3,7 @@
 {# kate: space-indent on; indent-width 2; replace-tabs on; hl Django HTML Template; #}
 {% block title %}Fluxmon &mdash; {{ check.target_host|display:"fqdn" }} &mdash; {% for checkparam in check.checkparameter_set.all %}{{ checkparam.parameter|display }}: {{ checkparam.value }} {% endfor %} &mdash; {{ variable|display }}{% endblock %}
 {% block content %}
-<div class="screenonly">
+<div>
   <ol class="breadcrumb">
     <li><a href="{% url 'hosts.views.domains' %}">Hosts</a></li>
     <li>
@@ -16,25 +16,31 @@
 </div>
 {% include "monitoring/checkinfo.inc.html" %}
 <h3>{{ variable|display }}</h3>
-<div ng-controller="GraphDurationCtrl" ng-init="end = {{ end }};">
-  <div id="profiles" class="screenonly">
+<div
+    ng-controller="GraphDurationCtrl" ng-init="end = {{ end }};"
+    class="container col-xs-12 col-sm-12 col-md-12 col-lg-12 no-padding">
+  <div id="profiles">
     <a ng-repeat="profile in profiles"
-       class="btn" ng-class="{ 'btn-primary': profile == active_profile, 'btn-default': profile != active_profile}"
+       class="btn" ng-class="{
+         'btn-primary': profile == active_profile,
+         'btn-default': profile != active_profile,
+         'hidden-xs':   !profile.tiny
+         }"
        ng-click="set_active_profile(profile)">{[ profile.title ]}</a>
     <br />
   </div>
-  <div style="width: 100%; position: relative;" id="imgcontainer">
+  <div style="position: relative;" id="imgcontainer">
     <div
       id="imgselector"
       style="background-color: rgba(30, 30, 220, 0.4); position: absolute; height: 153px; width: 1px; z-index: 100; visibility: hidden;">&nbsp;</div>
     <img
-      class="widescreenonly" alt="graph" style="margin: 0 auto"
+      class="visible-md-inline visible-lg-inline" alt="graph" style="margin: 0 auto"
       ng-src="{% url 'monitoring.views.render_check' check.uuid variable.name %}?start={[ start ]}&amp;end={[ end ]}" />
     <img
-      class="narrowscreenonly" alt="graph" style="margin: 0 auto"
+      class="visible-sm-inline" alt="graph" style="margin: 0 auto"
       ng-src="{% url 'monitoring.views.render_check' check.uuid variable.name %}?width=410&amp;start={[ start ]}&amp;end={[ end ]}" />
     <img
-      class="tinyscreenonly" alt="graph" style="margin: 0 auto"
+      class="visible-xs-inline" alt="graph" style="margin: 0 auto"
       ng-src="{% url 'monitoring.views.render_check' check.uuid variable.name %}?width=220&amp;start={[ start ]}&amp;end={[ end ]}" />
   </div>
 </div>
