--- a/static/base.css
+++ b/static/base.css
@@ -1,10 +1,3 @@
-#content {
-/*   width: 800px; */
-/*   orphans: 2; */
-/*   margin: 30px auto 40px auto; */
-  font-family: 'PT Sans', sans-serif;
-  font-size: 14pt;
-}
 h1, h2 {
   color: #003366;
   border-bottom: 1px solid #003366;
@@ -22,48 +15,6 @@ dd ul {
   margin: 0;
 }
 
-.fluxhidden {
-  display: none;
-}
-
-.narrowscreenonly {
-  display: none;
-}
-.tinyscreenonly {
-  display: none;
-}
-.screenonly {
-  display: none;
-}
-@media screen {
-  .screenonly {
-    display: inline;
-  }
-}
-@media screen and (max-width:825px) {
-  #content {
-/*     width: 500px; */
-    font-size: 12pt;
-  }
-  .widescreenonly {
-    display: none;
-  }
-  .narrowscreenonly {
-    display: inline;
-  }
-  .tinyscreenonly {
-    display: none;
-  }
-}
-@media screen and (max-width:525px) {
-  #content {
-/*     width: 310px; */
-    font-size: 10pt;
-  }
-  .narrowscreenonly {
-    display: none;
-  }
-  .tinyscreenonly {
-    display: inline;
-  }
+.no-padding {
+  padding: 0 !important;
 }
