--- a/monitoring/templates/monitoring/graph.html
+++ b/monitoring/templates/monitoring/graph.html
@@ -27,6 +27,9 @@
          'hidden-xs':   !profile.tiny
          }"
        ng-click="set_active_profile(profile)">{[ profile.title ]}</a>
+    <div class="visible-sm-inline visible-md-inline visible-lg-inline" >
+      <label><input type="checkbox" ng-model="prediction" ng-init="prediction = true" /> Show prediction</label>
+    </div>
     <br />
   </div>
   <div style="position: relative;" id="imgcontainer">
@@ -35,13 +38,13 @@
       style="background-color: rgba(30, 30, 220, 0.4); position: absolute; height: 153px; width: 1px; z-index: 100; visibility: hidden;">&nbsp;</div>
     <img
       class="visible-md-inline visible-lg-inline" alt="graph" style="margin: 0 auto"
-      ng-src="{% url 'monitoring.views.render_check' check.uuid variable.name %}?start={[ start ]}&amp;end={[ end ]}" />
+      ng-src="{% url 'monitoring.views.render_check' check.uuid variable.name %}?width=700&amp;start={[ start ]}&amp;end={[ end ]}&amp;prediction={[ prediction ]}" />
     <img
       class="visible-sm-inline" alt="graph" style="margin: 0 auto"
-      ng-src="{% url 'monitoring.views.render_check' check.uuid variable.name %}?width=410&amp;start={[ start ]}&amp;end={[ end ]}" />
+      ng-src="{% url 'monitoring.views.render_check' check.uuid variable.name %}?width=410&amp;start={[ start ]}&amp;end={[ end ]}&amp;prediction={[ prediction ]}" />
     <img
       class="visible-xs-inline" alt="graph" style="margin: 0 auto"
-      ng-src="{% url 'monitoring.views.render_check' check.uuid variable.name %}?width=220&amp;start={[ start ]}&amp;end={[ end ]}" />
+      ng-src="{% url 'monitoring.views.render_check' check.uuid variable.name %}?width=220&amp;start={[ start ]}&amp;end={[ end ]}&amp;prediction={[ prediction ]}" />
   </div>
 </div>
 <script type="text/javascript">
