--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,7 @@
     <script type="text/javascript" src="/jquery/jquery.min.js"></script>
     <script type="text/javascript" src="/angular.js/angular.min.js"></script>
     <script type="text/javascript" src="/static/ng.app.js"></script>
+    <script type="text/javascript" src="/static/ng.zoomable.js"></script>
   </head>
   <body>
     <div id="wrap">
